Agregue varios forms para meter datos. agregue form vacio para main admin

--- a/PrototipoPED/PrototipoPED.csproj
+++ b/PrototipoPED/PrototipoPED.csproj
@@ -53,61 +53,94 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FmrIngresoDatosPaciente.cs">
+    <Compile Include="Forms de Pantallazos\FmrIngresoDatosPaciente.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FmrIngresoDatosPaciente.Designer.cs">
+    <Compile Include="Forms de Pantallazos\FmrIngresoDatosPaciente.Designer.cs">
       <DependentUpon>FmrIngresoDatosPaciente.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="Forms de Pantallazos\FrmMainAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Forms de Pantallazos\FrmMainAdmin.Designer.cs">
+      <DependentUpon>FrmMainAdmin.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmAuxiliar.cs">
+    <Compile Include="Forms de Pantallazos\FrmMainDoctor.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmAuxiliar.Designer.cs">
+    <Compile Include="Forms de Pantallazos\FrmMainDoctor.Designer.cs">
+      <DependentUpon>FrmMainDoctor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms de Pantallazos\FrmAuxiliar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms de Pantallazos\FrmAuxiliar.Designer.cs">
       <DependentUpon>FrmAuxiliar.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmCrearReporte.cs">
+    <Compile Include="Forms de Pantallazos\FrmCrearGrafica.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmCrearReporte.Designer.cs">
+    <Compile Include="Forms de Pantallazos\FrmCrearGrafica.Designer.cs">
+      <DependentUpon>FrmCrearGrafica.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms de Pantallazos\FrmCrearReporte.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms de Pantallazos\FrmCrearReporte.Designer.cs">
       <DependentUpon>FrmCrearReporte.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmGuardarCitas.cs">
+    <Compile Include="Forms de Pantallazos\FrmGuardarCitas.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmGuardarCitas.Designer.cs">
+    <Compile Include="Forms de Pantallazos\FrmGuardarCitas.Designer.cs">
       <DependentUpon>FrmGuardarCitas.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmLogin.cs">
+    <Compile Include="Forms de Pantallazos\FrmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmLogin.Designer.cs">
+    <Compile Include="Forms de Pantallazos\FrmLogin.Designer.cs">
       <DependentUpon>FrmLogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms de Pantallazos\FrmVerDatosPaciente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms de Pantallazos\FrmVerDatosPaciente.Designer.cs">
+      <DependentUpon>FrmVerDatosPaciente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms de Pantallazos\FrmVerReporte.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms de Pantallazos\FrmVerReporte.Designer.cs">
+      <DependentUpon>FrmVerReporte.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="FmrIngresoDatosPaciente.resx">
+    <EmbeddedResource Include="Forms de Pantallazos\FmrIngresoDatosPaciente.resx">
       <DependentUpon>FmrIngresoDatosPaciente.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Forms de Pantallazos\FrmMainDoctor.resx">
+      <DependentUpon>FrmMainDoctor.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmAuxiliar.resx">
+    <EmbeddedResource Include="Forms de Pantallazos\FrmAuxiliar.resx">
       <DependentUpon>FrmAuxiliar.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmCrearReporte.resx">
+    <EmbeddedResource Include="Forms de Pantallazos\FrmCrearGrafica.resx">
+      <DependentUpon>FrmCrearGrafica.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms de Pantallazos\FrmCrearReporte.resx">
       <DependentUpon>FrmCrearReporte.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmGuardarCitas.resx">
+    <EmbeddedResource Include="Forms de Pantallazos\FrmGuardarCitas.resx">
       <DependentUpon>FrmGuardarCitas.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmLogin.resx">
+    <EmbeddedResource Include="Forms de Pantallazos\FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms de Pantallazos\FrmVerDatosPaciente.resx">
+      <DependentUpon>FrmVerDatosPaciente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms de Pantallazos\FrmVerReporte.resx">
+      <DependentUpon>FrmVerReporte.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -131,6 +164,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Clases\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
