--- a/PrototipoPED/PrototipoPED.csproj
+++ b/PrototipoPED/PrototipoPED.csproj
@@ -53,11 +53,17 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Forms de Pantallazos\FmrIngresoDatosPaciente.cs">
+    <Compile Include="Forms de Pantallazos\FrmAgregarDoctor.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms de Pantallazos\FmrIngresoDatosPaciente.Designer.cs">
-      <DependentUpon>FmrIngresoDatosPaciente.cs</DependentUpon>
+    <Compile Include="Forms de Pantallazos\FrmAgregarDoctor.Designer.cs">
+      <DependentUpon>FrmAgregarDoctor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms de Pantallazos\FrmGuardarPaciente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms de Pantallazos\FrmGuardarPaciente.Designer.cs">
+      <DependentUpon>FrmGuardarPaciente.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms de Pantallazos\FrmMainAdmin.cs">
       <SubType>Form</SubType>
@@ -115,8 +121,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Forms de Pantallazos\FmrIngresoDatosPaciente.resx">
-      <DependentUpon>FmrIngresoDatosPaciente.cs</DependentUpon>
+    <EmbeddedResource Include="Forms de Pantallazos\FrmAgregarDoctor.resx">
+      <DependentUpon>FrmAgregarDoctor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms de Pantallazos\FrmGuardarPaciente.resx">
+      <DependentUpon>FrmGuardarPaciente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms de Pantallazos\FrmMainAdmin.resx">
+      <DependentUpon>FrmMainAdmin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms de Pantallazos\FrmMainDoctor.resx">
       <DependentUpon>FrmMainDoctor.cs</DependentUpon>
